# cpp-utilities

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yaml  build_and_test.yml
include/: updatable_priority_queue.hpp
include/cpp-utilities/: constexpr_sqrt.hpp  updatable_priority_queue.hpp
test/: constexpr_sqrt.cpp  updatable_priority_queue.cpp
